feat(sprint-6): implement charts, multi-scenarios and fix navigation/dashboard issues

--- a/docs/stories/2.6.3-graphiques-evolution.md
+++ b/docs/stories/2.6.3-graphiques-evolution.md
@@ -1,6 +1,6 @@
 # Story 2.6.3: Graphiques d'Évolution
 
-Status: ready-for-dev
+Status: done
 
 ## Story
 
@@ -10,22 +10,22 @@ Status: ready-for-dev
 
 ## Acceptance Criteria
 
-1. [ ] **Graphique Cashflow** : Histogramme montrant le cashflow net annuel sur toute la durée.
-2. [ ] **Graphique Patrimoine Net** : Courbe montrant l'évolution de la valeur du bien vs le capital restant dû (Net Wealth).
-3. [ ] **Graphique Répartition** : Visualisation de la part capital vs intérêts dans les mensualités cumulées.
-4. [ ] **Interactivité** : Tooltips affichant les valeurs précises au survol des points/barres.
-5. [ ] **Mise à jour dynamique** : Les graphiques réagissent instantanément au changement d'horizon de projection (5, 10, 15, 20, 25 ans).
+1. [x] **Graphique Cashflow** : Histogramme montrant le cashflow net annuel sur toute la durée.
+2. [x] **Graphique Patrimoine Net** : Courbe montrant l'évolution de la valeur du bien vs le capital restant dû (Net Wealth).
+3. [x] **Graphique Répartition** : Visualisation de la part capital vs intérêts dans les mensualités cumulées (Fusionné dans Patrimoine).
+4. [x] **Interactivité** : Tooltips affichant les valeurs précises au survol des points/barres.
+5. [x] **Mise à jour dynamique** : Les graphiques réagissent instantanément au changement d'horizon de projection (5, 10, 15, 20, 25 ans).
 
 ## Tasks / Subtasks
 
-- [ ] **Task 1: Installation et Configuration** (AC: 1, 2)
-  - [ ] Vérifier/Installer `recharts` si absent.
-  - [ ] Créer des composants wrapper pour les graphiques standardisés ( Nordic style).
-- [ ] **Task 2: Transformation des données** (AC: 5)
-  - [ ] Créer une fonction utilitaire pour transformer `ProjectionAnnuelle[]` au format Recharts `{ name, value1, value2 }`.
-- [ ] **Task 3: Intégration dans le Dashboard** (AC: 1, 2, 3)
-  - [ ] Ajouter une section "Analyses Graphiques" dans la page de résultats.
-  - [ ] Implémenter `CashflowChart.tsx` and `WealthChart.tsx`.
+- [x] **Task 1: Installation et Configuration** (AC: 1, 2)
+  - [x] Vérifier/Installer `recharts` si absent.
+  - [x] Créer des composants wrapper pour les graphiques standardisés (`CashflowChart`, `PatrimoineChart`).
+- [x] **Task 2: Transformation des données** (AC: 5)
+  - [x] Créer une fonction utilitaire pour transformer `ProjectionAnnuelle[]` au format Recharts `{ name, value1, value2 }`.
+- [x] **Task 3: Intégration dans le Dashboard** (AC: 1, 2, 3)
+  - [x] Ajouter une section "Analyses Graphiques" dans la page de résultats.
+  - [x] Implémenter `CashflowChart.tsx` and `PatrimoineChart.tsx`.
 
 ## Dev Notes
 
