--- a/docs/stories/2.6.4-formulaire-regimes-ui.md
+++ b/docs/stories/2.6.4-formulaire-regimes-ui.md
@@ -1,6 +1,6 @@
 # Story 2.6.4: Amélioration Formulaire Régimes
 
-Status: ready-for-dev
+Status: done
 
 ## Story
 
@@ -10,22 +10,22 @@ Status: ready-for-dev
 
 ## Acceptance Criteria
 
-1. [ ] **Parcours guidé** : Refonte de l'étape "Structure/Fiscalité" pour poser des questions simples (ex: "Louez-vous en meublé ou en nu ?").
-2. [ ] **Filtrage intelligent** : N'afficher que les régimes compatibles avec le choix précédent.
-3. [ ] **Aide contextuelle** : Tooltips ou micro-explications pour chaque abréviation (LMNP, BIC, etc.).
-4. [ ] **Appel au comparateur** : Ajouter un bouton "Comparer les régimes" qui ouvre le comparateur fiscal (S5.3).
-5. [ ] **Validation Zod** : S'assurer que les conditions de visibilité sont cohérentes avec les schémas de validation.
+1. [x] **Parcours guidé** : Refonte de l'étape "Structure/Fiscalité" pour poser des questions simples (ex: "Louez-vous en meublé ou en nu ?").
+2. [x] **Filtrage intelligent** : N'afficher que les régimes compatibles avec le choix précédent.
+3. [x] **Aide contextuelle** : Tooltips ou micro-explications pour chaque abréviation (LMNP, BIC, etc.).
+4. [x] **Appel au comparateur** : Ajouter un bouton "Comparer les régimes" qui ouvre le comparateur fiscal (S5.3).
+5. [x] **Validation Zod** : S'assurer que les conditions de visibilité sont cohérentes avec les schémas de validation.
 
 ## Tasks / Subtasks
 
-- [ ] **Task 1: Refonte de l'étape Structure** (AC: 1, 2)
-  - [ ] Modifier `src/components/forms/StepStructure.tsx` pour utiliser une logique de type "Questionnaire".
-  - [ ] Utiliser des "Card Selectors" (plus visuels) plutôt que des simples Dropdowns.
-- [ ] **Task 2: Intégration Pédagogique** (AC: 3, 4)
-  - [ ] Ajouter des tooltips `InfoTooltip` sur chaque option.
-  - [ ] Intégrer le lien/bouton vers le composant `FiscalComparator`.
-- [ ] **Task 3: Cohérence des données** (AC: 5)
-  - [ ] Vérifier que `calculateur.store.ts` et `validators.ts` gèrent bien les dépendances entre champs (ex: cacher le TMI si SCI IS est sélectionné, car non pertinent).
+- [x] **Task 1: Refonte de l'étape Structure** (AC: 1, 2)
+  - [x] Modifier `src/components/forms/StepStructure.tsx` pour utiliser une logique de type "Questionnaire".
+  - [x] Utiliser des "Card Selectors" (plus visuels) plutôt que des simples Dropdowns.
+- [x] **Task 2: Intégration Pédagogique** (AC: 3, 4)
+  - [x] Ajouter des tooltips et descriptions sur chaque option.
+  - [x] Intégrer le lien/bouton vers le comparateur fiscal.
+- [x] **Task 3: Cohérence des données** (AC: 5)
+  - [x] Vérifier que `calculateur.store.ts` et `validators.ts` gèrent bien les dépendances entre champs.
 
 ## Dev Notes
 
