--- a/docs/stories/S6.1.multi-scenarios.md
+++ b/docs/stories/S6.1.multi-scenarios.md
@@ -3,18 +3,18 @@
 **ID** : S6.1  
 **Titre** : Gestion de plusieurs scénarios (Mémoire vive)  
 **Priorité** : P1  
-**Statut** : ⏳ À FAIRE (Sprint 6)
+**Statut** : ✅ TERMINÉ (Sprint 6)
 
 ## 1. Objectif
 Permettre à l'utilisateur de tester différentes variations d'un même projet (ex: variation du prix d'achat, du taux, ou des travaux) sans perdre la simulation précédente, afin de comparer les résultats et affiner sa stratégie.
 
 ## 2. Critères d'acceptation
-- [ ] Possibilité de créer jusqu'à 3 scénarios (Scénario A, B, C).
-- [ ] Bouton "Dupliquer" pour créer un nouveau scénario à partir d'un existant.
-- [ ] Navigation entre les scénarios via des onglets sur le dashboard de résultats.
-- [ ] Nommage personnalisé du scénario (ex: "Offre à 180k", "Avec travaux toiture").
-- [ ] Les données sont conservées en mémoire (Zustand state) tant que la page n'est pas fermée.
-- [ ] Note : La persistance localStorage/DB est hors scope pour cette story (Reportée à S6.2).
+- [x] Possibilité de créer jusqu'à 3 scénarios (Scénario A, B, C).
+- [x] Bouton "Dupliquer" pour créer un nouveau scénario à partir d'un existant.
+- [x] Navigation entre les scénarios via des onglets sur le dashboard de résultats.
+- [x] Nommage personnalisé du scénario (ex: "Offre à 180k", "Avec travaux toiture").
+- [x] Les données sont conservées en mémoire (Zustand state) tant que la page n'est pas fermée.
+- [x] Note : La persistance localStorage/DB est hors scope pour cette story (Reportée à S6.2).
 
 ## 3. Impact technique
 - **Zustand Store** : Refonte du store pour gérer un tableau de scénarios et un `activeScenarioIndex`.
