--- a/docs/stories/S6.3.graphiques-evolution.md
+++ b/docs/stories/S6.3.graphiques-evolution.md
@@ -3,17 +3,17 @@
 **ID** : S6.3  
 **Titre** : Visualisation graphique des projections  
 **Priorité** : P2  
-**Statut** : ⏳ À FAIRE (Sprint 6)
+**Statut** : ✅ TERMINÉ (Sprint 6)
 
 ## 1. Objectif
 Rendre les projections pluriannuelles plus digestes et parlantes via des graphiques interactifs permettant de visualiser la tendance de l'investissement sur 20-25 ans.
 
 ## 2. Critères d'acceptation
-- [ ] Graphique 1 : Évolution du Cashflow net annuel (Bars).
-- [ ] Graphique 2 : Évolution du Patrimoine Net (Line) - Valeur bien vs Capital restant dû.
-- [ ] Graphique 3 : Répartition Capital / Intérêts cumulés.
-- [ ] Interactivité : Tooltips affichant les valeurs exactes au survol.
-- [ ] Adaptabilité : Les graphiques se mettent à jour selon l'horizon de projection choisi.
+- [x] Graphique 1 : Évolution du Cashflow net annuel (Bars).
+- [x] Graphique 2 : Évolution du Patrimoine Net (Line) - Valeur bien vs Capital restant dû.
+- [x] Graphique 3 : Répartition Capital / Intérêts cumulés (Inclus dans Patrimoine).
+- [x] Interactivité : Tooltips affichant les valeurs exactes au survol.
+- [x] Adaptabilité : Les graphiques se mettent à jour selon l'horizon de projection choisi.
 
 ## 3. Impact technique
 - **Bibliothèque** : Utilisation de `recharts` (déjà installée ou à ajouter).
