--- a/docs/stories/S6.4.formulaire-regimes-ui.md
+++ b/docs/stories/S6.4.formulaire-regimes-ui.md
@@ -3,17 +3,17 @@
 **ID** : S6.4  
 **Titre** : Workflow guidé du choix fiscal  
 **Priorité** : P2  
-**Statut** : ⏳ À FAIRE (Sprint 6)
+**Statut** : ✅ TERMINÉ (Sprint 6)
 
 ## 1. Objectif
 Simplifier l'étape la plus complexe pour l'utilisateur (le choix du régime fiscal) en proposant un parcours guidé et pédagogique évitant les erreurs de saisie courantes.
 
 ## 2. Critères d'acceptation
-- [ ] Refonte de l'étape "Structure" du wizard.
-- [ ] Sélection par type d'exploitation en premier : "Location Nue" vs "Location Meublée".
-- [ ] Affichage conditionnel des régimes (ex: n'afficher Micro-BIC que si Meublée est sélectionné).
-- [ ] Intégration de tooltips d'aide ("C'est quoi le LMNP au réel ?").
-- [ ] Lien rapide vers le comparateur fiscal (S5.3) pour aide à la décision.
+- [x] Refonte de l'étape "Structure" du wizard.
+- [x] Sélection par type d'exploitation en premier : "Location Nue" vs "Location Meublée".
+- [x] Affichage conditionnel des régimes (ex: n'afficher Micro-BIC que si Meublée est sélectionné).
+- [x] Intégration de tooltips d'aide ("C'est quoi le LMNP au réel ?").
+- [x] Lien rapide vers le comparateur fiscal (S5.3) pour aide à la décision.
 
 ## 3. Impact technique
 - **Composant** : `StepStructure.tsx` et `StepFiscalite.tsx` (si séparés).
