fix(pr): resolve Sourcery review comments and mask secrets (secure)

--- a/docs/ux/audit-ux-2026-02-06.md
+++ b/docs/ux/audit-ux-2026-02-06.md
@@ -41,7 +41,7 @@
 
 **Implémentation observée:**
 - Le bouton "Lancer l'analyse" ne navigue pas
-- **Impact:** Violate le principe "< 25 clics" et bloque le flow principal
+- **Impact:** Viole le principe "< 25 clics" et bloque le flow principal
 
 **Lien vers bug:** [BUG-003](file:///D:/Devs/Renta_Immo/docs/bugs/rapport-test-e2e.md)
 
@@ -53,8 +53,8 @@
 > Variantes `currency`, `percent`, `number` avec formatage propre
 
 **Observations:**
-1. **Taux assurance:** Affiche `0.30000001192092896` au lieu de `0.3%`
-2. **Pourcentages financement:** 89% + 19% = 108%
+1. **Taux d’assurance:** Affiche `0.30000001192092896` au lieu de `0.3%`
+2. **Pourcentages de financement:** 89% + 19% = 108%
 
 **Impact:** Viole le principe "Clarté avant tout", confiance réduite
 
